# Object-Oriented-Programming

A01_2/: CMakeLists.txt  p2.c
A02_3_4/: CMakeLists.txt  Country.c  Country.h  CountryRepository.c  CountryRepository.h  DynamicArray.c  DynamicArray.h  Operation.c  Operation.h  Service.c  Service.h  UI.c  UI.h  main.c
A05_6_7/: CMakeLists.txt
A05_6_7/Domain/: Date.cpp  Date.h  Event.cpp  Event.h  Time.h
A05_6_7/Repo/: Repository.cpp  Repository.h
A05_6_7/Service/: Service.cpp  Service.h
A05_6_7/StartApp/: main.cpp
A05_6_7/Test/: Tests.cpp  Tests.h
A05_6_7/UI/: UI.cpp  UI.h
A08_9_10/: CMakeLists.txt
A08_9_10/Domain/: Event.cpp  Event.h
A08_9_10/Exceptions/: RepoException.cpp  UserException.cpp
A08_9_10/Repo/: CSVrepository.h  Repository.cpp
A08_9_10/Service/: Service.cpp  Service.h  UserService.h
A08_9_10/StartApp/: EventList.csv  EventList.html  events.txt  main.cpp
A08_9_10/Test/: Tests.cpp
A08_9_10/UI/: UI.cpp
A08_9_10/Validators/: Validator.h
A11_12_13/: CMakeLists.txt
A11_12_13/Domain/: Date.cpp  Event.cpp
A11_12_13/DynamicVector/: DynamicVector.cpp
A11_12_13/Exceptions/: RepoException.h  UserException.h
A11_12_13/GUI/: GUI.cpp  GUI.h  GUI.ui  merge.cpp  merge.h  merge.ui  qtclass.cpp  qtclass.h  qtclass.ui
A11_12_13/Repo/: CSVrepository.cpp  HTMLrepository.cpp  HTMLrepository.h  Repository.h  UserRepository.cpp  UserRepository.h
A11_12_13/StartApp/: EventList.html  events.txt  main.cpp
A11_12_13/Test/: Tests.h
A11_12_13/UI/: UI.h
A14_GUI/: CMakeLists.txt  ceva.txt
A14_GUI/Domain/: Date.h  Time.cpp  Time.h
A14_GUI/DynamicVector/: DynamicVector.h
A14_GUI/GUI/: GUI.cpp  GUI.h  MylistTableModel.cpp  MylistTableModel.h  tableviewwidget.cpp  tableviewwidget.h  tableviewwidget.ui
A14_GUI/Repo/: UserRepository.h
A14_GUI/Service/: Service.cpp  Service.h  UserService.cpp  UserService.h
A14_GUI/StartApp/: EventList.html  events.txt  main.cpp
A14_GUI/Validators/: Validator.cpp
Lab tests/t1-911-Beltechi-Lois-1/: Bill.cpp  Bill.h  CMakeLists.txt  DynamicVector.h  Repo.cpp  Repo.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Lab tests/t2-911-Beltechi-Lois-1/: CMakeLists.txt  Client.cpp  Client.h  Dwelling.cpp  Dwelling.h  RealEstateAgency.cpp  RealEstateAgency.h  UI.cpp  UI.h  main.cpp
Lab tests/t3-911-Beltechi-Lois/: CMakeLists.txt  Repo.cpp  Repo.h  Weather.cpp  Weather.h  file.txt  gui.cpp  gui.h  gui.ui  main.cpp
Practical Exam/e911-911-Beltechi-Lois-1/: CMakeLists.txt  Ideas.cpp  Ideas.h  IdeasRepo.cpp  IdeasRepo.h  ScreenWriter.cpp  ScreenWriter.h  ScreenWritersRepo.cpp  ScreenWritersRepo.h  TableModel.cpp  TableModel.h  ideas.txt  main.cpp  screenwriters.txt  screenwriterwindow.cpp  screenwriterwindow.h  screenwriterwindow.ui
