cmake_minimum_required(VERSION 3.22)
project(t1_911_Beltechi_Lois_1)

set(CMAKE_C_STANDARD 14)


add_executable(t1_911_Beltechi_Lois_1
        main.cpp
        DynamicVector.h
        Repo.cpp
        Repo.h
        Service.h
        Service.cpp
        UI.cpp
        UI.h
        Bill.cpp
        Bill.h)
